traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:5: error: too many arguments for method getDirection: ()plm.universe.Direction
def a(){getDirection(est);if(estFaceMur()){gauche();if (estFaceMur()){return true}};else return false} 
                    ^Snake:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
def a(){getDirection(est);if(estFaceMur()){gauche();if (estFaceMur()){return true}};else return false} 
                                                                             ^Snake:5: warning: enclosing method a has result type Unit: return value discarded
def a(){getDirection(est);if(estFaceMur()){gauche();if (estFaceMur()){return true}};else return false} 
                                                                      ^Snake:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
def a(){getDirection(est);if(estFaceMur()){gauche();if (estFaceMur()){return true}};else return false} 
                                                                                                ^Snake:5: warning: enclosing method a has result type Unit: return value discarded
def a(){getDirection(est);if(estFaceMur()){gauche();if (estFaceMur()){return true}};else return false} 
                                                                                         ^