traversal.snake.Snake.scala.code
override def run() {
}


def a(){getDirection(est);if(estFaceMur()){gauche();if (estFaceMur()){return true}};else return false}